# gkit

./: Cargo.toml
benches/: git_benches.rs
src/: error.rs  git.rs  lib.rs  main.rs  metrics.rs
src/git/: contributions.rs  kit.rs
src/metrics/: cadence.rs  overview.rs
src/tui/: state.rs  ui.rs
