[package]
name = "gkit"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
git2 = "0.21.0"
ratatui = "0.30.0"
thiserror = "2"
crossterm = "0.29.0"


[dev-dependencies]
divan = "0.1"

[[bench]]
name = "git_benches"
harness = false

[profile.release]
debug = true
codegen-units = 1
lto = true
opt-level = "s"
strip = true

